Styles.css: fixed main map visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,11 @@ nav h1 a {
 	text-decoration: underline;
 }
 /* ====================== Map ====================== */
+#map-container {
+	height: 400px;
+	width: 100%;
+}
+
 #map {
 	height: 400px;
 	width: 100%;
